Fix an issue with clipping footnote overflows.

--- a/hugo/static/footnotes.css
+++ b/hugo/static/footnotes.css
@@ -6,3 +6,7 @@
 	background-color: rgb(200, 200, 200);
 }
 
+.bigfoot-footnote__content {
+	margin-bottom: 1em;
+}
+
